--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,10 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "puppeteer": "^2.0.0"
   }
 }
